Fixed side menu z-index issues

--- a/frontend/materialize/sass/components/main.scss
+++ b/frontend/materialize/sass/components/main.scss
@@ -1088,5 +1088,13 @@ hr {
   line-height: 1.3;
 }
 
+#content{
+  /* drag-target has a z-index of 998 */
+  z-index: 999;
+}
+
+#sidenav-overlay{
+  z-index: 1000 !important;
+}
 
 
